show evolution in real time

--- a/test/map_gen_disp/Makefile
+++ b/test/map_gen_disp/Makefile
@@ -1,17 +1,17 @@
 CC = g++
-CCFLAGS = -std=c++11
+CCFLAGS = -std=c++11\
 
 CIMGFLAGS =\
 		  -O2\
-		  -L/usr/X11/lib\
+		  -L/usr/X11/lib\ # X11 directory varies on different machine
 		  -lm\
 		  -lpthread\
 		  -lX11\
-		  -I/usr/X11/include
-OBJ = noise.o test.o randommap.o disdensity.o
+		  -I/usr/X11/include # X11 directory varies on different machine
+OBJ = show_image_example.o noise.o randommap.o disdensity.o
 
 
-test: $(OBJ)
+show_image_example: $(OBJ)
 	$(CC) $(CCFLAGS) $(CIMGFLAGS) -o $@ $(OBJ)
 
 %.o: %.cpp
