--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ test/map_gen_disp/noise.o
 *.o
 test/map_gen_disp/test
 *.ppm
+*.swp
+.DS_Store
+*.dat
+test/map_gen_disp/show_image_example
+test/map_gen_disp/map_gen_example
