--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@
 .DS_Store
 test/map_gen_disp/show_image_example
 test/map_gen_disp/map_gen_example
-test/map_gen_disp/CImg.h
+test/map_gen_disp/*.h
+test/map_gen_disp/*.hpp
