--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ test/map_gen_disp/show_image_example
 test/map_gen_disp/map_gen_example
 test/map_gen_disp/*.h
 test/map_gen_disp/*.hpp
+test/map_gen_disp/gtest/
