--- a/test/map_gen_disp/Makefile
+++ b/test/map_gen_disp/Makefile
@@ -22,6 +22,7 @@ GTEST = -lgtest
 
 IMSHOW_OBJ = show_image_example.o noise.o randommap.o disdensity.o
 MAPGEN_OBJ = map_gen_example.o noise.o randommap.o disdensity.o
+CALC_OBJ = caldensity.o noise.o randommap.o disdensity.o landscape.o
 
 EXEC = show_image_example map_gen_example
 
@@ -45,17 +46,19 @@ disdensity.o: $(SRC_DIR)/disdensity.cpp
 landscape.o:$(SRC_DIR)/landscape.cpp
 	$(CC) -c $(CCFLAGS) $(INC) $(CIMGINC) -o $@ $<
 
-#calc:$(CALC_OBJ)
-#	$(CC) $(CCFLAGS) $(CIMGFLAGS) $(LIB) -DDEBUG_OUT -O3 -o $@ $^
+calc:$(CALC_OBJ)
+	$(CC) $(CCFLAGS) $(LIB) -DDEBUG_OUT -O3 -o $@ $^
 
-#caldensity.o:$(SRC_DIR)/caldensity.cpp
-#		$(CC) -c $(CCFLAGS) $(CIMGFLAGS) -o $@ $<
+caldensity.o:$(SRC_DIR)/caldensity.cpp
+		$(CC) -c $(CCFLAGS) $(CIMGINC) $(INC) -o $@ $<
 
 test: map_gen_test.o noise.o randommap.o
 	$(CC) $(CCFLAGS) $(INC) $(LIB) $(GTEST) -o $@ $^
 
 map_gen_test.o:map_gen_test.cpp
 	$(CC) -c $(CCFLAGS) $(INC) $(CIMGINC) -o $@ $<
+
+
 
 
 .PHONY:clean
